Prueba técnica: se agregan las funcionalidades crud para customer
